# gift_registry

./: .gitignore  Cargo.toml  docker-compose.yml
migrations/: 20251222000001_create_users.sql  20251222000002_create_groups.sql  20251222000003_create_group_members.sql  20251222000004_create_wishlist_items.sql  20251222000005_create_item_claims.sql  20251222000006_create_indexes.sql
src/: db.rs  errors.rs  main.rs
src/models/: group.rs  group_member.rs  item_claim.rs  mod.rs  user.rs  wishlist_item.rs
src/repositories/: group_repository.rs  mod.rs  user_repository.rs
