[package]
name = "gift_registry"
version = "0.1.0"
edition = "2024"

[dependencies]
# async runtime
tokio = { version = "1", features = ["full"] }

# database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }

# utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"

[dev-dependencies]
# for testing
tokio-test = "0.4"
